# RFID_beamformer_lib

./: .gitmodules  CMakeLists.txt
AD5371_ctrl/: CMakeLists.txt  Controller_Global.h  Fixed_beam.cpp  Phase_Attenuator_controller.cpp  Phase_Attenuator_controller.hpp  SPI_communicator.cpp  SPI_communicator.hpp  Vout_controller.cpp  Vout_controller.hpp
Reader_comm/: CMakeLists.txt  IPC_controller.cpp  IPC_controller.hpp
SIC/: CMakeLists.txt  SIC_controller.cpp  SIC_controller.hpp
kalman_filter/: CMakeLists.txt  Kalman_filter.cpp  Kalman_filter.hpp
